--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -44,19 +45,141 @@
         </nav>
     </header>
 
-    <main>
+    <main class="mt-4">
+        <div class="container-md">
+            <div class="row">
+                <div class="col-md-12 col-lg-9">
+                    <table class="table table-striped caption-top">
+                        <caption class="justify-content-between">
+                            <span class="fs-3">Catalogo Libri</span>
+                            <button class="justify-content-end">Aggiungi Libro</button>
+                        </caption>
+
+                        <thead>
+                            <tr>
+                                <th class="col-6">Titolo</th>
+                                <th class="d-none d-sm-none d-md-block">Data Prestito</th>
+                                <th class="">Stato</th>
+                                <th class="">Azioni</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Prima riga tabella-->
+                            <tr>
+                                <td scope="row">I pilastri della terra</td>
+                                <td class="d-none d-sm-none d-md-block">-</td>
+                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td>
+                                    <button class="btn border border-dark-subtle me-1"><i
+                                            class="bi bi-pencil-fill"></i></button>
+                                    <button class="btn border border-dark-subtle"><i
+                                            class="bi bi-trash3-fill"></i></button>
+                                </td>
+                            </tr>
+                            <!-- Seconda riga tabella-->
+                            <tr>
+                                <td scope="row">I promessi sposi</td>
+                                <td class="d-none d-sm-none d-md-block">-</td>
+                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td>
+                                    <button class="btn border border-dark-subtle me-1"><i
+                                            class="bi bi-pencil-fill"></i></button>
+                                    <button class="btn border border-dark-subtle"><i
+                                            class="bi bi-trash3-fill"></i></button>
+                                </td>
+                            </tr>
+                            <!-- Terza riga tabella-->
+                            <tr>
+                                <td scope="row">Il signore degli anelli</td>
+                                <td class="d-none d-sm-none d-md-block">18/10/2023</td>
+                                <td><span class="bg-warning text-white rounded p-1">In Prestito</span></td>
+                                <td>
+                                    <button class="btn border border-dark-subtle me-1"><i
+                                            class="bi bi-pencil-fill"></i></button>
+                                    <button class="btn border border-dark-subtle"><i
+                                            class="bi bi-trash3-fill"></i></button>
+                                </td>
+                            </tr>
+                            <!-- Quarta riga tabella-->
+                            <tr>
+                                <td scope="row">Harry Potter e la pietra filosofale</td>
+                                <td class="d-none d-sm-none d-md-block">-</td>
+                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td>
+                                    <button class="btn border border-dark-subtle me-1"><i
+                                            class="bi bi-pencil-fill"></i></button>
+                                    <button class="btn border border-dark-subtle"><i
+                                            class="bi bi-trash3-fill"></i></button>
+                                </td>
+                            </tr>
+                            <!-- Quinta riga tabella-->
+                            <tr>
+                                <td scope="row">Il codice Da Vinci</td>
+                                <td class="d-none d-sm-none d-md-block">-</td>
+                                <td><span class="bg-danger text-white rounded p-1">Non disponibile</span></td>
+                                <td>
+                                    <button class="btn border border-dark-subtle me-1"><i
+                                            class="bi bi-pencil-fill"></i></button>
+                                    <button class="btn border border-dark-subtle"><i
+                                            class="bi bi-trash3-fill"></i></button>
+                                </td>
+                            </tr>
+                            <!-- Sesta riga tabella-->
+                            <tr>
+                                <td scope="row">Shining</td>
+                                <td class="d-none d-sm-none d-md-block">-</td>
+                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td>
+                                    <button class="btn border border-dark-subtle me-1"><i
+                                            class="bi bi-pencil-fill"></i></button>
+                                    <button class="btn border border-dark-subtle"><i
+                                            class="bi bi-trash3-fill"></i></button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="col-lg-3 col-md-12">
+                    <div class="card mb-4">
+                        <div class="card-header fs-3">
+                            Todo
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush border border-secondary-subtle rounded">
+                                <li class="list-group-item"><input type="checkbox"> Chiamare segretaria</li>
+                                <li class="list-group-item"><input type="checkbox"> Mandare avvisi prestiti scaduti</li>
+                                <li class="list-group-item"><input type="checkbox"> Ordinare nuovi libri</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header fs-3">
+                            F.A.Q.
+                        </div>
+                        <div>
+                            <div class="card-body">
+                                <div class="list-group list-group-flush">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Come aggiungere un nuovo libro?
+                                            <a class="text-end">ciao</a>
+                                        </li>
+                                        <li class="list-group-item"><a href="">Come posso accedere all'anagrafica
+                                                utenti?</a></li>
+                                        <li class="list-group-item"><a href="">Posso usare questa dashboard da
+                                                mobile?</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
     </main>
-
-    <footer>
-
-    </footer>
-
-
-
-
-
-
 
 
 
