--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <header class="bg-dark">
-        <nav class="navbar navbar-expand-lg">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
                 <img class="logo-pagina" src="img/duck.png" alt="Logo duck">
                 <button class="navbar-toggler border-light-subtle" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon bg-white text-success"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="#">Anagrafica Utenti</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-white" href="#">Storico Prestiti</a>
+                            <a class="nav-link" href="#">Storico Prestiti</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">Help</a>
@@ -60,17 +60,18 @@
                         <thead>
                             <tr>
                                 <th class="col-6">Titolo</th>
-                                <th class="d-none d-sm-none d-md-block">Data Prestito</th>
+                                <th class="d-none d-sm-none d-md-table-cell">Data Prestito</th>
                                 <th class="">Stato</th>
                                 <th class="text-center">Azioni</th>
                             </tr>
                         </thead>
+
                         <tbody>
                             <!-- Prima riga tabella-->
                             <tr>
                                 <td scope="row">I pilastri della terra</td>
-                                <td class="d-none d-sm-none d-md-block">-</td>
-                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">-</td>
+                                <td><span class="bg-success text-white badge">Disponibile</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -81,8 +82,8 @@
                             <!-- Seconda riga tabella-->
                             <tr>
                                 <td scope="row">I promessi sposi</td>
-                                <td class="d-none d-sm-none d-md-block">-</td>
-                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">-</td>
+                                <td><span class="bg-success text-white badge">Disponibile</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -93,8 +94,8 @@
                             <!-- Terza riga tabella-->
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
-                                <td class="d-none d-sm-none d-md-block">18/10/2023</td>
-                                <td><span class="bg-warning text-white rounded p-1">In Prestito</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">18/10/2023</td>
+                                <td><span class="bg-warning text-white badge">In Prestito</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -105,8 +106,8 @@
                             <!-- Quarta riga tabella-->
                             <tr>
                                 <td scope="row">Harry Potter e la pietra filosofale</td>
-                                <td class="d-none d-sm-none d-md-block">-</td>
-                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">-</td>
+                                <td><span class="bg-success text-white badge">Disponibile</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -117,8 +118,8 @@
                             <!-- Quinta riga tabella-->
                             <tr>
                                 <td scope="row">Il codice Da Vinci</td>
-                                <td class="d-none d-sm-none d-md-block">-</td>
-                                <td><span class="bg-danger text-white rounded p-1">Non disponibile</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">-</td>
+                                <td><span class="bg-danger text-white badge">Non disponibile</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -129,8 +130,8 @@
                             <!-- Sesta riga tabella-->
                             <tr>
                                 <td scope="row">Shining</td>
-                                <td class="d-none d-sm-none d-md-block">-</td>
-                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">-</td>
+                                <td><span class="bg-success text-white badge">Disponibile</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -141,8 +142,8 @@
                             <!-- Settima riga tabella-->
                             <tr>
                                 <td scope="row">La divina commedia</td>
-                                <td class="d-none d-sm-none d-md-block">21/09/2023</td>
-                                <td><span class="bg-warning text-white rounded p-1">In Prestito</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">21/09/2023</td>
+                                <td><span class="bg-warning text-white badge">In Prestito</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -153,8 +154,8 @@
                             <!-- Ottava riga tabella -->
                             <tr>
                                 <td scope="row">Il trono di spade</td>
-                                <td class="d-none d-sm-none d-md-block">-</td>
-                                <td><span class="bg-success text-white rounded p-1">Disponibile</span></td>
+                                <td class="d-none d-sm-none d-md-table-cell">-</td>
+                                <td><span class="bg-success text-white badge">Disponibile</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -164,10 +165,9 @@
                             </tr>
                             <!-- Nona riga tabella -->
                             <tr>
-                                <td scope="row">Il mondo di <span
-                                        class="badge text-primary bg-danger-subtle">Sofia</span></td>
-                                <td class="d-none d-sm-none d-md-block">-</td>
-                                <td><span class="bg-danger text-white rounded p-1">Non disponibile</span></td>
+                                <td scope="row">Il mondo di Sofia</td>
+                                <td class="d-none d-sm-none d-md-table-cell">-</td>
+                                <td><span class="bg-danger text-white badge">Non disponibile</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
                                             class="bi bi-pencil-fill"></i></button>
@@ -178,7 +178,7 @@
                             <!-- Decima riga tabella-->
                             <tr>
                                 <td scope="row">Le cronache di Marmoa: il leone, la strega e l'armadio</td>
-                                <td class="d-none d-sm-none d-md-block">25/07/2023</td>
+                                <td class="d-none d-sm-none d-md-table-cell">25/07/2023</td>
                                 <td><span class="badge bg-warning text-white">In Prestito</span></td>
                                 <td class="text-center">
                                     <button class="btn border border-dark-subtle me-1"><i
@@ -205,37 +205,72 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-header fs-3">
                             F.A.Q.
                         </div>
-                        <div>
-                            <div class="card-body">
-                                <div class="list-group list-group-flush">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Come aggiungere un nuovo libro?
-                                            <a class="">ciao</a>
-                                        </li>
-                                        <li class="list-group-item"><a href="">Come posso accedere all'anagrafica
-                                                utenti?</a></li>
-                                        <li class="list-group-item"><a href="">Posso usare questa dashboard da
-                                                mobile?</a></li>
-                                    </ul>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        Come aggiungere un nuovo libro?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is
+                                        intended to demonstrate the
+                                        <code>.accordion-flush</code> class. This is the first item's accordion body.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                        aria-controls="flush-collapseTwo">
+                                        Come posso accedere all'anagrafica utenti?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is
+                                        intended to demonstrate the
+                                        <code>.accordion-flush</code> class. This is the second item's accordion body.
+                                        Let's imagine this being
+                                        filled with some actual content.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                        aria-controls="flush-collapseThree">
+                                        Posso usare questa dashboard da mobile?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is
+                                        intended to demonstrate the
+                                        <code>.accordion-flush</code> class. This is the third item's accordion body.
+                                        Nothing more exciting
+                                        happening here in terms of content, but just filling up the space to make it
+                                        look, at least at first
+                                        glance, a bit more representative of how this would look in a real-world
+                                        application.
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
+        </div>
     </main>
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
