--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
         <div class="container-md">
             <div class="row">
                 <div class="col-md-12 col-lg-9">
-                    <table class="table table-striped caption-top">
-                        <caption class="">
-                            <span class="fs-3">Catalogo Libri</span>
-                            <button class="text-white bg-primary border-white rounded px-2 py-1">
-                                Aggiungi Libro</button>
-                        </caption>
+                    <div class="d-flex justify-content-between">
+                        <span class="fs-3">Catalogo Libri</span>
+                        <button class="text-white bg-primary border-white rounded px-2 py-1">
+                            Aggiungi Libro</button>
+                    </div>
 
+
+                    <table class="table table-striped">
                         <!-- Intestazione Tabella-->
                         <thead>
                             <tr>
@@ -121,10 +122,12 @@
                                 <td class="d-none d-sm-none d-md-table-cell">-</td>
                                 <td><span class="bg-danger text-white badge">Non disponibile</span></td>
                                 <td class="text-center">
-                                    <button class="btn border border-dark-subtle me-1"><i
-                                            class="bi bi-pencil-fill"></i></button>
-                                    <button class="btn border border-dark-subtle"><i
-                                            class="bi bi-trash3-fill"></i></button>
+                                    <div class="badge">
+                                        <button class="btn border border-dark-subtle me-1">
+                                            <i class="bi bi-pencil-fill"></i></button>
+                                        <button class="btn border border-dark-subtle">
+                                            <i class="bi bi-trash3-fill"></i></button>
+                                    </div>
                                 </td>
                             </tr>
                             <!-- Sesta riga tabella-->
@@ -209,7 +212,7 @@
                         <div class="card-header fs-3">
                             F.A.Q.
                         </div>
-                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion accordion-flush card-body" id="accordionFlushExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
