--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link">Help</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="features.html">Features Bootstrap</a>
+                        </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cerca..." aria-label="Search">
