ADD: Colums witch icons

--- a/features.html
+++ b/features.html
@@ -51,31 +51,40 @@
     <main>
         <section class="container px-4 py-5">
             <h2 class="border-bottom pb-2">Columns witch icons</h2>
-            <div class="row">
-                <div class="col-lg-4">
+            <div class="row row-cols-lg-3 mt-4">
+                <div class="mt-3">
+                    <div class="d-flex mb-3">
+                        <i
+                            class="bi bi-hand-thumbs-up-fill bg-primary text-white px-3 py-2 rounded fs-2 justify-content-center"></i>
+                    </div>
                     <h3>Featured title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor error quasi fuga, sequi eius ex
                         animi odit eum sapiente provident?</p>
                     <a href="#">Call to action</a>
                 </div>
-                <div class="col-lg-4">
-                    <div>
-                        <i class="bi bi-person-circle bg-primary text-white p-3"></i>
+                <div class="mt-3">
+                    <div class="d-flex mb-3">
+                        <i
+                            class="bi bi-person-circle bg-primary text-white px-3 py-2 rounded fs-2 justify-content-center"></i>
                     </div>
                     <h3>Featured title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor error quasi fuga, sequi eius ex
                         animi odit eum
                         sapiente provident?</p>
-                    <a href="#">Call to action</a>
+                    <a href=" #">Call to action</a>
                 </div>
-                <div class="col-lg-4">
+                <div class="mt-3">
+                    <div class="d-flex mb-3">
+                        <i
+                            class="bi bi-emoji-grimace bg-primary text-white px-3 py-2 rounded fs-2 justify-content-center"></i>
+                    </div>
                     <h3>Featured title</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor error quasi fuga, sequi eius ex
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor error quasi fuga, sequi eius
+                        ex
                         animi odit eum
                         sapiente provident?</p>
                     <a href="#">Call to action</a>
                 </div>
-
             </div>
 
         </section>
