ADD: Section Hanging Icons

--- a/features.html
+++ b/features.html
@@ -55,7 +55,7 @@
                 <div class="mt-3">
                     <div class="d-flex mb-3">
                         <i
-                            class="bi bi-hand-thumbs-up-fill bg-primary text-white px-3 py-2 rounded fs-2 justify-content-center"></i>
+                            class="bi bi-hand-thumbs-up-fill bg-primary text-white p-3 rounded fs-3 justify-content-center d-inline-flex"></i>
                     </div>
                     <h3>Featured title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor error quasi fuga, sequi eius ex
@@ -65,7 +65,7 @@
                 <div class="mt-3">
                     <div class="d-flex mb-3">
                         <i
-                            class="bi bi-person-circle bg-primary text-white px-3 py-2 rounded fs-2 justify-content-center"></i>
+                            class="bi bi-person-circle bg-primary text-white p-3 rounded fs-3 justify-content-center d-inline-flex"></i>
                     </div>
                     <h3>Featured title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor error quasi fuga, sequi eius ex
@@ -76,7 +76,7 @@
                 <div class="mt-3">
                     <div class="d-flex mb-3">
                         <i
-                            class="bi bi-emoji-grimace bg-primary text-white px-3 py-2 rounded fs-2 justify-content-center"></i>
+                            class="bi bi-toggles2 bg-primary text-white p-3 rounded fs-3 justify-content-center d-inline-flex"></i>
                     </div>
                     <h3>Featured title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor error quasi fuga, sequi eius
@@ -86,6 +86,68 @@
                     <a href="#">Call to action</a>
                 </div>
             </div>
+        </section>
+
+        <hr>
+
+        <!-- Sezione Hanging Icons-->
+        <section class="container px-4 py-5">
+            <h2 class="border-bottom pb-2">Hanging Icons</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <!-- Colonna 1-->
+                <div class="col d-flex align-items-start">
+                    <div class="me-3">
+                        <i
+                            class="bi bi-toggles2 bg-body-secondary text-body-emphasis fs-4 justify-content-center d-inline-flex rounded p-2"></i>
+                    </div>
+                    <div>
+                        <h3>Featured title</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo quam modi reprehenderit
+                            excepturi
+                            nobis optio itaque blanditiis. Ab, pariatur ullam.
+                        </p>
+                        <a href="#" class="bg-primary text-white btn btn-primary">Primary button</a>
+                    </div>
+                </div>
+                <!-- Colonna 2-->
+                <div class="col d-flex align-items-start">
+                    <div class="me-3">
+                        <i
+                            class="bi bi-cpu-fill bg-body-secondary text-body-emphasis fs-4 justify-content-center d-inline-flex rounded p-2"></i>
+                    </div>
+                    <div>
+                        <h3>Featured title</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo quam modi reprehenderit
+                            excepturi
+                            nobis optio itaque blanditiis. Ab, pariatur ullam.
+                        </p>
+                        <a href="#" class="bg-primary text-white btn btn-primary">Primary button</a>
+                    </div>
+                </div>
+                <!-- Colonna 3-->
+                <div class="col d-flex align-items-start">
+                    <div class="me-3">
+                        <i
+                            class="bi bi-tools bg-body-secondary text-body-emphasis fs-4 justify-content-center d-inline-flex rounded p-2"></i>
+                    </div>
+                    <div>
+                        <h3>Featured title</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo quam modi reprehenderit
+                            excepturi
+                            nobis optio itaque blanditiis. Ab, pariatur ullam.
+                        </p>
+                        <a href="#" class="bg-primary text-white btn btn-primary">Primary button</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section>
 
         </section>
     </main>
