ADD: Customs Cards

--- a/features.html
+++ b/features.html
@@ -147,8 +147,58 @@
 
         <hr>
 
-        <section>
+        <!-- Sezione Customs Cards -->
+        <section class="container px-4 py-5">
+            <h2 class="border-bottom pb-2">Custom Cards</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <!-- Colonna Card 1-->
+                <div class="col">
+                    <div class="card text-bg-dark rounded-4 overflow-hidden">
+                        <img src="/img/ALEAMM_073.jpg" class="card-img card-cover rounded-4" alt="">
+                        <div class="">
+                            <div class="d-flex flex-column h-100 p-5 pb-3 text-white">
+                                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Titolo molto piccolo</h3>
+                                <ul class="d-flex list-unstyled mt-auto">
+                                    <li class="me-auto">
+                                        <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
+                                            class="rounded-circle border border-white">
+                                    </li>
+                                    <li class="me-3 d-flex align-items-center">
+                                        <i class="bi bi-geo-fill me-2"></i>
+                                        <small>Mondo</small>
+                                    </li>
+                                    <li class="me-3 d-flex align-items-center">
+                                        <i class="bi bi-calendar3 me-2"></i>
+                                        <small>3d</small>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+
+                <!-- Colonna Card 2-->
+                <div class="col">
+                    <div class="card text-bg-dark rounded-4">
+                        <img src="/img/ALEAMM_078.jpg" class="card-img rounded-4" alt="">
+                        <div class="card-img-overlay">
+                            <h3 class="card-title">Card title</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content.
+                                This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Colonna Card 3-->
+                <div class="col">
+                    <div class="card text-bg-dark">
+                        <img src="/img/ALEAMM_088.jpg" class="card-img" alt="vbsjjv">
+                    </div>
+                </div>
+
+            </div>
         </section>
     </main>
 
