--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Catalogo Libri</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Catalogo Libri</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Anagrafica Utenti</a>
+                            <a class="nav-link" href="./create-user.html">Creazione Utente</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="#">Storico Prestiti</a>
@@ -36,7 +36,7 @@
                             <a class="nav-link">Help</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="features.html">Features Bootstrap</a>
+                            <a class="nav-link" href="./features.html">Features Bootstrap</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
